--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -62,7 +62,7 @@
       border-radius: 5px;
     }
 
-    #participants {
+    .panel {
       margin-top: 2rem;
       background: #fff;
       padding: 1rem;
@@ -70,13 +70,11 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    #participants ul {
+    ul {
       list-style: none;
       padding: 0;
     }
-    #participants li {
-      padding: 4px 0;
-    }
+    li { padding: 4px 0; }
   </style>
 </head>
 <body>
@@ -103,10 +101,23 @@
     </div>
   </div>
 
+  <!-- Snapshot -->
+  <div id="snapshot" class="panel" style="display:none;">
+    <h2>Asta: <span id="auctionName"></span></h2>
+    <p><strong>Caller attuale:</strong> <span id="caller">-</span></p>
+    <p><strong>Giocatore corrente:</strong> <span id="player">-</span></p>
+  </div>
+
   <!-- Partecipanti -->
-  <div id="participants">
+  <div id="participants" class="panel">
     <h2>Utenti Connessi</h2>
     <ul id="participants-list"></ul>
+  </div>
+
+  <!-- Squadre -->
+  <div id="teams" class="panel">
+    <h2>Squadre</h2>
+    <div id="teams-list"></div>
   </div>
 
   <div id="log"></div>
@@ -129,6 +140,23 @@
         const li = document.createElement("li");
         li.textContent = `${p.name} (id: ${p.id})`;
         ul.appendChild(li);
+      });
+    }
+
+    function renderTeams(teams) {
+      console.log(teams)
+      const div = document.getElementById("teams-list");
+      div.innerHTML = "";
+      teams.forEach(team => {
+        const card = document.createElement("div");
+        card.style.border = "1px solid #ddd";
+        card.style.margin = "0.5rem 0";
+        card.style.padding = "0.5rem";
+        card.innerHTML = `
+          <strong>${team.name}</strong> - Budget: ${team.budget}<br>
+          Giocatori: ${team.players.map(p => `${p.name} (${p.role})`).join(", ") || "Nessuno"}
+        `;
+        div.appendChild(card);
       });
     }
 
@@ -172,14 +200,30 @@
       ws.onmessage = (event) => {
         const msg = JSON.parse(event.data);
         log("WS → " + JSON.stringify(msg));
+        data = JSON.parse(msg.payload)
+        if (msg.type === "auction_snapshot") {
+          document.getElementById("snapshot").style.display = "block";
+          document.getElementById("auctionName").innerText = data.name;
+          document.getElementById("caller").innerText = data.current_caller || "-";
+          document.getElementById("player").innerText = data.current_player || "-";
+
+          //participants = data.participants.map((name, idx) => ({ id: idx+1, name }));
+          //renderParticipants();
+          renderTeams(data.teams);
+        }
 
         if (msg.type === "participant_joined") {
-          participants.push(msg.payload);
+          participants.push(data);
           renderParticipants();
         }
 
         if (msg.type === "joined") {
-          participants.push(msg.payload);
+          participants.push(data);
+          renderParticipants();
+        }
+
+        if (msg.type === "participant_left") {
+          participants = participants.filter(p => p.id !== data.id);
           renderParticipants();
         }
       };
